--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Web App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Source+Sans+Pro:100,200,300,400|Dosis:300,400|Titillium Web:300,400|Karla: 300,400">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope:300,400,600|Source+Sans+Pro:100,200,300,400|Dosis:300,400|Titillium Web:300,400|Karla: 300,400">
     <link rel="stylesheet" href="build/css/main.css">
 </head>
 
