tweaked repeat button on music app to be easier to click on and better positioned

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Web App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope:300,400,600|Source+Sans+Pro:100,200,300,400|Dosis:300,400|Titillium Web:300,400|Karla: 300,400">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Source+Sans+Pro:100,200,300,400|Dosis:300,400|Titillium Web:300,400|Karla: 300,400">
     <link rel="stylesheet" href="build/css/main.css">
 </head>
 
@@ -139,11 +139,11 @@
                                             <button class="btn--stopped js-play-pause"></button>
                                             <button class="btn--next js-next"></button>
                                             <button class="btn--repeat js-repeat">
-                                            	<svg width="50px" height="50px" viewBox="0 0 100 100" preserveAspectRatio="none">
-                                                    <path fill="transparent" stroke="white" stroke-width="5px" class="btn--random-path" d="M0,50 C0,50 5,37 10,42 M 10,40 L 50 40"></path>
-                                                    <path class="svgarrow" fill="white" d="M 50,40 L 50,35 L 60,40 L 50,45 L 50,40"></path>
-                                                    <path fill="transparent" stroke="white" stroke-width="4px" class="btn--random-path" d="M55,46 C55,46 53,55 45,57 M 46,57 L 7,57"></path>
-                                                    <path class="svgarrow" fill="white" d="M 7,57 L 7,50 L 0,57 L 7,64 L 7,57"></path>
+                                            	<svg width="30px" height="20px" viewBox="0 0 70 45" preserveAspectRatio="none">
+                                                    <path fill="transparent" stroke="white" stroke-width="5px" class="btn--random-path" d="M0,25 C0,25 5,12 10,17 M 10,15 L 50 15"></path>
+                                                    <path class="svgarrow" fill="white" d="M 50,15 L 50,10 L 60,15 L 50,20 L 50,15"></path>
+                                                    <path fill="transparent" stroke="white" stroke-width="4px" class="btn--random-path" d="M55,21 C55,21 53,30 45,32 M 46,32 L 7,32"></path>
+                                                    <path class="svgarrow" fill="white" d="M 7,32 L 7,25 L 0,32 L 7,39 L 7,32"></path>
                                                 </svg>
                                             </button>
                                         </div>
